[gd_scene load_steps=5 format=3 uid="uid://ds5exfybvrtnb"]

[ext_resource type="Script" path="res://Scenes/Combat/Skills/Rotate/Testing/quick_draw.gd" id="1_r40bw"]
[ext_resource type="Texture2D" uid="uid://yaa5hx73fa83" path="res://Assets/whiteCircle.png" id="1_skqsl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkpeg"]
radius = 18.0
height = 164.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pcjk5"]

[node name="QuickDraw" type="CharacterBody2D" groups=["Skill"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_r40bw")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.907555, 0.92592, 7.70092e-07, 1)
position = Vector2(0, -23)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_skqsl")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.993838, 0.402157, 5.62167e-05, 1)
position = Vector2(0, -23)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_skqsl")

[node name="RotatePart" type="Node2D" parent="."]

[node name="DangerArea" type="Area2D" parent="RotatePart"]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotatePart/DangerArea"]
position = Vector2(62, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fkpeg")

[node name="Area2D" type="Area2D" parent="RotatePart"]
collision_layer = 32
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotatePart/Area2D"]
shape = SubResource("CircleShape2D_pcjk5")

[connection signal="area_shape_entered" from="RotatePart/Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="RotatePart/Area2D" to="." method="_on_area_2d_body_entered"]
